# PhotoSort

./: CMakeLists.txt
res/: res.qrc
src/: CMakeLists.txt  dirmodel.cpp  dirmodel.h  dirview.cpp  dirview.h  groupedimages.cpp  groupedimages.h  main.cpp  mainwindow.cpp  mainwindow.h  singleimageitem.cpp  singleimageitem.h  viewer.cpp  viewer.h
